--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+.start{
+  opacity: 0;
+  transform: scale(0);
+}
+.startDetail{
+  opacity: 0;
+}
+.end{
+  transform: scale(1);
+  opacity: 1;
+  transition: all 0.5s;
+}
+.endDetail{
+  opacity: 1;
+  transition: all 0.5s;
+}
+
 .main-bg{
   height: 300px;
   /* background-image: url('./img/bg.png'); */
